<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FVCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="investment_amount">Investment Amount</string>
    <string name="years">Years</string>
    <string name="future_value">Future Value</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="calculate">Calculate</string>

</resources>
